Cleanup: remove duplicate method; fix TS types (u_uv0/u_uv1, imageBitmap flag); ScreenCache enum typing; exclude legacy file from build

--- a/packages/gtmap/tsconfig.json
+++ b/packages/gtmap/tsconfig.json
@@ -12,5 +12,5 @@
     "useDefineForClassFields": false
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.*"]
+  "exclude": ["**/*.test.*", "src/mapgl.legacy.ts"]
 }
