--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,11 @@
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "baseUrl": ".",
+    "paths": {
+      "@gtmap": ["packages/gtmap/src"],
+      "@gtmap/*": ["packages/gtmap/src/*"]
+    },
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
