--- a/packages/gtmap/tsconfig.json
+++ b/packages/gtmap/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "composite": true,
     "declaration": true,
     "outDir": "dist",
     "rootDir": "src",
