--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "description": "Minimal WebGL tile map with Express server",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build && tsc -p packages/gtmap/tsconfig.json",
-    "preview": "vite preview",
+    "start": "pnpm -C apps/gtmap-noframework-test dev",
+    "dev": "pnpm -C apps/gtmap-noframework-test dev",
+    "build": "pnpm -C apps/gtmap-noframework-test build && pnpm -C packages/gtmap build",
+    "preview": "pnpm -C apps/gtmap-noframework-test preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
