Apps: make Svelte app the default demo
- Root scripts now run apps/gtmap-svelte-test
- README points to SvelteKit /map route as default
- Keep legacy no-framework app as secondary

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "description": "Minimal WebGL tile map with Express server",
   "scripts": {
-    "start": "pnpm -C apps/gtmap-noframework-test dev",
-    "dev": "pnpm -C apps/gtmap-noframework-test dev",
-    "build": "pnpm -C apps/gtmap-noframework-test build && pnpm -C packages/gtmap build",
-    "preview": "pnpm -C apps/gtmap-noframework-test preview",
+    "start": "pnpm -C apps/gtmap-svelte-test dev",
+    "dev": "pnpm -C apps/gtmap-svelte-test dev",
+    "build": "pnpm -C apps/gtmap-svelte-test build && pnpm -C packages/gtmap build",
+    "preview": "pnpm -C apps/gtmap-svelte-test preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
