Apps: update scripts and docs to new app folder names; switch scripts to workspace names
- Use npm -w with workspace names (gtmap-svelte-test, gtmap) to decouple from paths\n- Update README app paths to apps/svelte-gtmap-test and apps/noframework-gtmap-test\n- Regenerate package-lock.json to reflect new workspace paths

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "apps/*"
   ],
   "scripts": {
-    "start": "npm -w apps/gtmap-svelte-test run dev",
-    "dev": "npm -w apps/gtmap-svelte-test run dev",
-    "build": "npm -w apps/gtmap-svelte-test run build && npm -w packages/gtmap run build",
-    "preview": "npm -w apps/gtmap-svelte-test run preview",
+    "start": "npm -w gtmap-svelte-test run dev",
+    "dev": "npm -w gtmap-svelte-test run dev",
+    "build": "npm -w gtmap-svelte-test run build && npm -w gtmap run build",
+    "preview": "npm -w gtmap-svelte-test run preview",
     "lint": "eslint packages",
     "lint:fix": "eslint packages --fix",
     "format": "prettier -w \"packages/**/*\"",
