Docs: add Svelte/SvelteKit LLM docs fetch script and mirror
- Add script to download all linked Svelte/SvelteKit LLM docs to docs/svelte\n- Wire npm script: npm run fetch:svelte-docs\n- Update AGENTS.md: prefer downloaded docs over outdated internal Svelte knowledge

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint packages",
     "lint:fix": "eslint packages --fix",
     "format": "prettier -w \"packages/**/*\"",
-    "format:check": "prettier -c \"packages/**/*\""
+    "format:check": "prettier -c \"packages/**/*\"",
+    "fetch:svelte-docs": "node scripts/fetch-svelte-llm-docs.mjs"
   },
   "dependencies": {
     
