--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "typescript-eslint": "^8.41.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.4",
-    "typedoc": "^0.28.0"
+    "typedoc": "^0.28.0",
+    "typedoc-plugin-markdown": "^4.0.0"
   }
 }
