--- a/packages/gtmap/tsconfig.types.json
+++ b/packages/gtmap/tsconfig.types.json
@@ -1,17 +1,13 @@
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "declarationMap": false,
-    "outDir": "dist",
-    "stripInternal": true,
-    "composite": false
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "**/*.test.*"
-  ]
+	"extends": "./tsconfig.json",
+	"compilerOptions": {
+		"declaration": true,
+		"emitDeclarationOnly": true,
+		"declarationMap": false,
+		"outDir": "dist",
+		"stripInternal": true,
+		"composite": false
+	},
+	"include": ["src/**/*"],
+	"exclude": ["**/*.test.*"]
 }
