demo(Hud): remove cache/inflight/pending stats from HUD; keep frame only

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "pkg:pack": "npm -w @gaming.tools/gtmap run pack",
     "lint": "eslint packages",
     "lint:fix": "eslint packages --fix",
-    "format": "prettier -w \"packages/**/*\"",
-    "format:check": "prettier -c \"packages/**/*\"",
+    "format": "prettier --ignore-unknown -w \"packages/**/*\"",
+    "format:check": "prettier --ignore-unknown -c \"packages/**/*\"",
     "fetch:svelte-docs": "node scripts/fetch-svelte-llm-docs.mjs",
     "docs:api": "node scripts/clean-docs.mjs && typedoc --options typedoc.json && node scripts/generate-api-index.mjs",
     "version:auto": "node scripts/version-auto.mjs --patch-only",
