--- a/package.json
+++ b/package.json
@@ -33,9 +33,6 @@
     "release:gtmap": "npm run version:auto:commit && npm publish -w @gaming.tools/gtmap --access public",
     "release:gtmap:full": "npm run version:auto:commit && npm run pkg:pack && npm publish -w @gaming.tools/gtmap --access public"
   },
-  "dependencies": {
-    
-  },
   "devDependencies": {
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
@@ -46,10 +43,10 @@
     "eslint-plugin-import": "^2.32.0",
     "globals": "^15.9.0",
     "prettier": "^3.6.2",
-    "typescript-eslint": "^8.41.0",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.4",
     "typedoc": "^0.28.0",
-    "typedoc-plugin-markdown": "^4.0.0"
+    "typedoc-plugin-markdown": "^4.0.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
+    "vite": "^7.1.4"
   }
 }
