--- a/packages/gtmap/tsconfig.json
+++ b/packages/gtmap/tsconfig.json
@@ -12,7 +12,9 @@
 		"noUnusedParameters": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"useDefineForClassFields": false
+		"useDefineForClassFields": false,
+		"noUncheckedIndexedAccess": true,
+		"exactOptionalPropertyTypes": true
 	},
 	"include": ["src/**/*"],
 	"exclude": ["**/*.test.*", "src/mapgl.legacy.ts"]
