--- a/packages/gtmap/package.json
+++ b/packages/gtmap/package.json
@@ -15,10 +15,8 @@
 		}
 	},
 	"files": [
-		"dist/index.js",
-		"dist/index.d.ts",
-		"dist/api/**",
-		"dist/entities/**",
+		"dist/**/*.js",
+		"dist/**/*.d.ts",
 		"README.md",
 		"LICENSE"
 	],
@@ -30,8 +28,8 @@
 		"clean": "node -e \"try{require('fs').rmSync('dist',{recursive:true,force:true})}catch(e){}\"",
 		"build": "npm run clean && npm run build:types && npm run build:js",
 		"build:types": "node -e \"try{require('fs').rmSync('tsconfig.tsbuildinfo',{force:true})}catch(e){}\" && tsc -p ./tsconfig.types.json",
-		"build:js": "esbuild src/index.ts --bundle --format=esm --platform=browser --minify --outfile=dist/index.js",
-		"build:readable": "esbuild src/index.ts --bundle --format=esm --platform=browser --outfile=dist/index.readable.js",
+		"build:js": "esbuild src/index.ts src/internal/layers/workers/cluster-worker.ts --bundle --format=esm --platform=browser --minify --splitting --outdir=dist --outbase=src --entry-names=[dir]/[name] --chunk-names=chunks/[name]-[hash]",
+		"build:readable": "esbuild src/index.ts src/internal/layers/workers/cluster-worker.ts --bundle --format=esm --platform=browser --splitting --outdir=dist --outbase=src --entry-names=[dir]/[name].readable --chunk-names=chunks/[name]-[hash]",
 		"typecheck": "tsc -p ./tsconfig.json --noEmit",
 		"prepack": "npm run build && node -e \"const fs=require('fs'),p=require('path');try{fs.copyFileSync(p.resolve(__dirname,'..','..','LICENSE'), p.resolve(__dirname,'LICENSE'))}catch(e){}\"",
 		"pack": "npm pack"
